[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/OBJECTS/darkTree0.png" type="Texture" id=1]
[ext_resource path="res://fonts/joystix monospace.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://objects/SpecialAttacksMonument.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 54, 22.2 )

[sub_resource type="DynamicFont" id=2]
size = 8
font_data = ExtResource( 2 )

[node name="SpecialAttacksInventory" type="Area2D"]
collision_layer = 0
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 4.2 )
shape = SubResource( 1 )

[node name="PickText" type="Label" parent="."]
visible = false
margin_left = -12.0
margin_top = -38.0
margin_right = 9.0
margin_bottom = -28.0
custom_fonts/font = SubResource( 2 )
text = "[F]"

[connection signal="area_entered" from="." to="." method="_on_SpecialAttacksMonument_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_SpecialAttacksMonument_area_exited"]
